# nbkr-fx-rates-bot

./: .env.dist  .gitignore  README.md  config.example.ini  pyproject.toml
.github/workflows/: pytest.yml
src/: config.py  data_types.py  db.py  exceptions.py  main.py  national_bank.py  telegram.py  utils.py  views.py
src/banks/: api.py  parsers.py
tests/: commercial_banks.html  national_bank.xml  test_format_changed_fx_rate_text.py  test_match_currencies.py  test_national_bank_get_fx_rates.py  test_national_bank_parse_fx_rates.py  test_parse_currencies.py  test_parsers.py  test_telegram.py
