[tool.poetry]
name = "nbkr-bot"
version = "0.1.0"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
lxml = "^4.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]